--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 cmake==3.30.2
 coloredlogs==15.0.1
+cryptography==43.0.1
 ctranslate2==4.3.1
 decorator==5.1.1
 diskcache==5.6.3
@@ -46,6 +47,8 @@ numpy==2.0.2
 onnxruntime==1.19.2
 packaging==24.1
 pandas==2.2.2
+pdfminer.six==20231228
+pdfplumber==0.11.4
 pillow==10.4.0
 platformdirs==4.2.2
 pooch==1.8.2
@@ -57,14 +60,17 @@ pydantic==2.9.0
 pydantic_core==2.23.2
 pydeck==0.9.1
 Pygments==2.18.0
+pypdfium2==4.30.0
 python-dateutil==2.9.0.post0
 python-multipart==0.0.9
 pytz==2024.1
 PyYAML==6.0.2
 referencing==0.35.1
+regex==2024.7.24
 requests==2.32.3
 rich==13.8.0
 rpds-py==0.20.0
+safetensors==0.4.5
 scikit-learn==1.5.1
 scipy==1.14.1
 six==1.16.0
@@ -79,7 +85,7 @@ sympy==1.13.2
 tabulate==0.9.0
 tenacity==8.5.0
 threadpoolctl==3.5.0
-tokenizers==0.20.0
+tokenizers==0.19.1
 toml==0.10.2
 tornado==6.4.1
 tqdm==4.66.5
