--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,6 @@ onnxruntime==1.19.2
 packaging==24.1
 pandas==2.2.2
 pdfminer.six==20231228
-pdfplumber==0.11.4
 pillow==10.4.0
 platformdirs==4.2.2
 pooch==1.8.2
@@ -60,6 +59,8 @@ pydantic==2.9.0
 pydantic_core==2.23.2
 pydeck==0.9.1
 Pygments==2.18.0
+PyMuPDF==1.24.10
+PyMuPDFb==1.24.10
 pypdfium2==4.30.0
 python-dateutil==2.9.0.post0
 python-multipart==0.0.9
