--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==24.1.0
 altair==5.4.1
 annotated-types==0.7.0
 anyio==4.4.0
@@ -41,7 +42,7 @@ mdurl==0.1.2
 mpmath==1.3.0
 msgpack==1.0.8
 narwhals==1.6.2
-nexaai==0.0.8.2
+nexaai==0.0.8.3
 numba==0.60.0
 numpy==2.0.2
 onnxruntime==1.19.2
